--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Get dependencies
       run: |
         echo $PATH
-        echo go env
+        go env
         export PATH=$PATH:$(go env GOPATH)/bin
         go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
