--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,9 +18,7 @@ jobs:
 
     - name: Get dependencies
       run: |
-        echo $PATH
-        go env
-        export PATH=$PATH:$(go env GOPATH)/bin
+        mkdir $(go env GOPATH)/bin
         go get -v -t -d ./...
         if [ -f Gopkg.toml ]; then
             curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
